2002-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>

        * configure.ac, m4/ftflib.m4 : Autoconf macros to check for
          system font files and freetype library.

        * ide-projects/Windows/VisualC6/config.h: include macros for
          system font files.

2002-10-29  S. K. Bose  <bose@pavan.barc.ernet.in>

        * ide-projects/Windows/VisualC6/openvrml.dsp,
          ide-projects/Windows/VisualC6/lookat/lookat.dsp, 
          ide-projects/Windows/VisualC6/openvrml-core/openvrmlcore.dsp,
          ide-projects/Windows/VisualC6/openvrml-gl/openvrmlgl.dsp:
          Accommodate font and defined "HAVE_CONFIG_H"

        * src/lookat/ViewerGlut.cpp: Remove "winconfig.h"

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:
          Fixed if there is no vector information about character in
          "insertText" method.
  
2002-10-28  S. K. Bose  <bose@pavan.barc.ernet.in>

        * src/openvrml/OpenVRML/font.h,
          src/openvrml/OpenVRML/font.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/opevrml/OpenVRML/node.h, src/openvrml/OpenVRML/Viewer.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:
          To support font based on scalable font (TrueType, Type1) 
          present in the system using FreeType library.

        * src/openvrml/OpenVRML/doc2.cpp, 
          src/openvrml/OpenVRML/browser.cpp:
          std:: correctness fixes.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:
          remove "tex3" method.

2002-10-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Fixed crash when calling ProtoNode::setFieldImpl to set the
          value of an un-IS'd exposedField.

2002-10-26  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Vrml97Parser.cpp,