@@ -1,3 +1,10 @@
+2002-10-30  Braden McDaniel  <braden@endoframe.com>
+
+        * src/openvrml/OpenVRML/field.cpp, 
+          src/openvrml/OpenVRML/field.h: Added protected default
+          constructor, copy constructor, and assignment operator to
+          FieldValue.
+
 2002-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>
 
         * configure.ac, m4/ftflib.m4 : Autoconf macros to check for
